update clean target in Makefile

--- a/mcs/class/Mono.Security/Test/Mono.Security.Authenticode/Formatter/Makefile
+++ b/mcs/class/Mono.Security/Test/Mono.Security.Authenticode/Formatter/Makefile
@@ -5,7 +5,7 @@ MONO_PATH ?= /inst/m6/lib
 all: writefiles hashfile.exe
 
 clean:
-	rm -f writefiles hashfile.exe
+	rm -f writefiles hashfile.exe *.dll *.dll.temp
 
 test check run: all
 	./writefiles
