Split mono_method_get_header_checked into itself and mono_method_get_header_internal. mono_method_get_header_checked is public and must initialize the MonoError. mono_method_get_header_internal can instead use regular error_init.

--- a/mono/metadata/Makefile.am
+++ b/mono/metadata/Makefile.am
@@ -180,6 +180,7 @@ common_sources = \
 	image-internals.h	\
 	jit-info.c		\
 	loader.c		\
+	loader-internals.h	\
 	locales.c		\
 	locales.h		\
 	lock-tracer.c		\
