Get autotools scripts for Mono and Boehm to recognize i
PASE is most similar to AIX, and perhaps I assume other commercial
Unices, as well as PowerPC Linux, so grab variables from them as
needed.

With this, we get glib failing to build due to missing mkdtemp.

--- a/configure.ac
+++ b/configure.ac
@@ -374,6 +374,15 @@ case "$host" in
 		libgc_threads=pthreads
 		use_sigposix=yes
 		;;
+	*-*-os400*)
+		dnl IBM i PASE
+		CPPFLAGS="$CPPFLAGS -DGC_AIX_THREADS -D_REENTRANT"
+		libmono_cflags="-D_REENTRANT"
+		libgc_threads=pthreads
+		need_link_unlink=yes
+		use_sigposix=yes
+		parallel_mark="not tested"
+		;;
 	*)
 		AC_MSG_WARN([*** Please add $host to configure.ac checks!])
 		libdl="-ldl"
