--- a/libgc/configure.ac
+++ b/libgc/configure.ac
@@ -104,6 +104,10 @@ case "$THREADS" in
 	AC_DEFINE(GC_AIX_THREADS)
 	AC_DEFINE(_REENTRANT)
 	;;
+     *-*-os400*)
+	AC_DEFINE(GC_AIX_THREADS)
+	AC_DEFINE(_REENTRANT)
+	;;
      *-*-haiku*)
 	AC_DEFINE(GC_HAIKU_THREADS)
 	AC_DEFINE(_REENTRANT)
