Add hack to gfile-unix.c to work around flawed AIX header
From comment:

/* HACK: the preprocessor will not give us mkdtemp no matter
   what and Mono (for good reason) does
   "-Werror-implicit-function-declaration" so we error out;
   instead declare mkdtemp here; the linker will find mkdtemp
   anwyays. libuv has had similar issues, but they just ignore
   the compiler warning instead of failing on it.

   See: github.com/libuv/libuv/pull/740 */

--- a/configure.ac
+++ b/configure.ac
@@ -376,7 +376,7 @@ case "$host" in
 		;;
 	*-*-os400*)
 		dnl IBM i PASE
-		CPPFLAGS="$CPPFLAGS -DGC_AIX_THREADS -D_ALL_SOURCE -D_XOPEN_SOURCE=700 -D_LARGE_FILES -D_REENTRANT"
+		CPPFLAGS="$CPPFLAGS -DGC_AIX_THREADS -D_ALL_SOURCE -D_LARGE_FILES -D_REENTRANT"
 		libmono_cflags="-D_REENTRANT"
 		libgc_threads=pthreads
 		need_link_unlink=yes
