--- a/mcs/class/System/Makefile
+++ b/mcs/class/System/Makefile
@@ -123,6 +123,8 @@ endif
 
 endif
 
+LIB_MCS_FLAGS += -d:MONO_WEB_DEBUG
+
 EXTRA_DISTFILES = \
 	common.sources					\
 	common_networking.sources		\
