--- a/sdks/builds/.gitignore
+++ b/sdks/builds/.gitignore
@@ -4,6 +4,10 @@
 *.config.cache
 mxe-Win32/
 mxe-Win64/
+llvm-llvm32/
+llvm-llvm64/
+llvm-llvmwin32/
+llvm-llvmwin64/
 android-armeabi-*/
 android-armeabi-v7a-*/
 android-arm64-v8a-*/
