--- a/sdks/builds/Makefile
+++ b/sdks/builds/Makefile
@@ -19,23 +19,9 @@ endif
 
 all: package
 
+## Common Mono targets
 $(TOP)/configure: $(TOP)/configure.ac $(TOP)/autogen.sh
 	cd $(TOP) && PATH=$(EXTRA_PATH):$$PATH NOCONFIGURE=1 ./autogen.sh
-
-## LLVM
-
-LLVM_REV=3b82b3c9041eb997f627f881a67d20be37264e9c
-
-# Download a prebuilt llvm
-# Shared between ios and android
-.stamp-llvm-$(LLVM_REV):
-	./download-llvm.sh $@ $(LLVM_REV)
-
-build-llvm: .stamp-llvm-$(LLVM_REV)
-
-clean-llvm:
-	$(RM) -r ../out/llvm64
-	$(RM) .stamp-llvm-*
 
 TARGETS=
 
@@ -43,6 +29,11 @@ TARGETS=
 ifndef DISABLE_ANDROID
 # FIXME add iOS support(?)
 include mxe.mk
+endif
+
+## LLVM targets
+ifeq ($(and $(DISABLE_ANDROID),$(DISABLE_IOS)),)
+include llvm.mk
 endif
 
 ## BCL targets
