[sdks] Build mxe-Win{32,64}

--- a/sdks/builds/Makefile
+++ b/sdks/builds/Makefile
@@ -12,6 +12,13 @@ ifeq (, $(shell which glibtoolize))
 EXTRA_PATH=$(wildcard /usr/local/Cellar/libtool/*/bin/)
 endif
 
+# Some of the targets cannot be built in parallel (ex: mxe). This is a gross hack, but fixing it would mean a unknown
+# amount of change. For example, we could invoke the MXE targets with `$(MAKE) -f mxe.mk build-mxe-Win32` and move the
+# .NOTPARALLEL there.
+.NOTPARALLEL:
+
+all: package
+
 $(TOP)/configure: $(TOP)/configure.ac $(TOP)/autogen.sh
 	cd $(TOP) && PATH=$(EXTRA_PATH):$$PATH NOCONFIGURE=1 ./autogen.sh
 
@@ -31,6 +38,12 @@ clean-llvm:
 	$(RM) .stamp-llvm-*
 
 TARGETS=
+
+## MXE targets
+ifndef DISABLE_ANDROID
+# FIXME add iOS support(?)
+include mxe.mk
+endif
 
 ## BCL targets
 ifndef DISABLE_BCL
