Don't use __thread even if detected on AIX
tl;dr: The assembler gets angry with __thread and minimal-toc, and
changing options to replace minimal-toc causes linker issues; this
TLS option isn't important anyways if we have pthread instead,
like before when we were using Perzl's old GCC without __thread.

--- a/configure.ac
+++ b/configure.ac
@@ -395,6 +395,8 @@ case "$host" in
 		dnl the valloc call to alloc the guard page bombs out, even with extending the data area
 		with_sigaltstack=no
 		parallel_mark="not tested"
+		dnl use pthread TLS, __thread has issues with the compiler flags we use
+		with_tls=pthread
 		dnl ppc Linux is the same? test further
 		disable_munmap=yes
 		;;
