--- a/sdks/builds/Makefile
+++ b/sdks/builds/Makefile
@@ -12,25 +12,29 @@ ifeq (, $(shell which glibtoolize))
 EXTRA_PATH=$(wildcard /usr/local/Cellar/libtool/*/bin/)
 endif
 
+# Some of the targets cannot be built in parallel (ex: mxe). This is a gross hack, but fixing it would mean a unknown
+# amount of change. For example, we could invoke the MXE targets with `$(MAKE) -f mxe.mk build-mxe-Win32` and move the
+# .NOTPARALLEL there.
+.NOTPARALLEL:
+
+all: package
+
+## Common Mono targets
 $(TOP)/configure: $(TOP)/configure.ac $(TOP)/autogen.sh
 	cd $(TOP) && PATH=$(EXTRA_PATH):$$PATH NOCONFIGURE=1 ./autogen.sh
 
-## LLVM
-
-LLVM_REV=3b82b3c9041eb997f627f881a67d20be37264e9c
-
-# Download a prebuilt llvm
-# Shared between ios and android
-.stamp-llvm-$(LLVM_REV):
-	./download-llvm.sh $@ $(LLVM_REV)
-
-build-llvm: .stamp-llvm-$(LLVM_REV)
-
-clean-llvm:
-	$(RM) -r ../out/llvm64
-	$(RM) .stamp-llvm-*
-
 TARGETS=
+
+## MXE targets
+ifndef DISABLE_ANDROID
+# FIXME add iOS support(?)
+include mxe.mk
+endif
+
+## LLVM targets
+ifeq ($(and $(DISABLE_ANDROID),$(DISABLE_IOS)),)
+include llvm.mk
+endif
 
 ## BCL targets
 ifndef DISABLE_BCL
